--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: github
   # change repo to your git repository url
-  repo: RamboWasReal/gatsby-netlify-starter
+  repo: https://github.com/RamboWasReal/gatsby-netlify-starter
 
 media_folder: static/assets
 public_folder: /assets
